--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: #2980b9 url('https://i.imgur.com/DsaZ7N0.png') repeat 0 0;
+    background: url('https://i.imgur.com/DsaZ7N0.png') repeat 0 0;
 	-webkit-animation: 10s linear 0s normal none infinite animate;
 	-moz-animation: 10s linear 0s normal none infinite animate;
 	-ms-animation: 10s linear 0s normal none infinite animate;
@@ -38,8 +38,8 @@ input {
 }
 
 hr.style14 { 
-  height: 6px;
+	height: 6px;
 	background: url(http://ibrahimjabbari.com/english/images/hr-12.png) repeat-x 0 0;
     border: 0;
-  width: 60%;
+	width: 100%;
 }
